ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IMT_Invoice_Log__c/IMT_Invoice_Log__c.object-meta.xml
<CustomObject>
    <label>IMT Invoice Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>IMT Invoice Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMT Invoice Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>