ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IMT_Invoice_Log__c/fields/Data_Last_Modified_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Data_Last_Modified_Date_UTC__c</fullName>
    <label>Data Last Modified Date UTC</label>
    <type>DateTime</type>
</CustomField>