ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IMT_Invoice_Log__c/fields/JSON_Object__c.field-meta.xml
<CustomField>
    <fullName>JSON_Object__c</fullName>
    <label>JSON Object</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>