ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IMT_Invoice_Log__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>